--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-csso": "^3.0.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^3.2.0",
+    "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4"
   },
